# compile-time-turing

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  gcovr.cfg
.github/: constants.env
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/: Concepts.h  Configuration.h  ConfigurationConcepts.h  Direction.h  SpecialState.h  SpecificationConcepts.h  StaticTuringMachine.h
include/compile_time_turing/: sample_library.hpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp  turing_tests.cpp
